# husky-mine-rescuer-o

./: LICENSE  NOTICE  README.md
assets/NMT_MSEC_Wednd_Night/: NMT_MSEC_OccGrid_map.yaml
assets/screenshots/: NMT_MSEC_OccGr_map.yaml
ros/catkin_ws/: .gitignore
ros/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ros/catkin_ws/src/: .rosinstall  .rosinstall.bak
ros/catkin_ws/src/can/: CMakeLists.txt  package.xml
ros/catkin_ws/src/can/arduino/: atest.ino
ros/catkin_ws/src/can/arduino/CAN_drawerandnode_abomination/: CAN_drawerandnode_abomination.ino
ros/catkin_ws/src/can/arduino/drawer/: drawer.ino
ros/catkin_ws/src/can/arduino/node/: frames.hpp  node.ino
ros/catkin_ws/src/can/config/: can.yaml  husky.kcd
ros/catkin_ws/src/can/include/can/: can.hpp  frames.hpp
ros/catkin_ws/src/can/launch/: can.launch
ros/catkin_ws/src/can/src/: .joy_to_can.cpp.swp  a.out  can.cpp  joy_to_can.cpp  joy_to_can.old  test.cpp
ros/catkin_ws/src/can/test/: a.out
ros/catkin_ws/src/cartographer_ros/cartographer_ros/configuration_files/: husky.lua
ros/catkin_ws/src/husky_base/launch/: base.launch  base3.launch  map.launch
ros/catkin_ws/src/husky_coal_control/config/: teleop_logitech.yaml
ros/catkin_ws/src/husky_coal_description/env-hooks/: 60.husky_coal_description.sh
ros/catkin_ws/src/husky_coal_navigation/: package.xml
ros/catkin_ws/src/husky_coal_navigation/config/: costmap_common.yaml
ros/catkin_ws/src/husky_coal_navigation/launch/move_base/: move_base.launch
ros/catkin_ws/src/husky_control/config/: control.yaml  localization.old.yaml  localization.yaml  teleop_logitech.yaml
ros/catkin_ws/src/husky_control/launch/: control.launch  control.launch.old
ros/catkin_ws/src/husky_description/launch/: description.launch
ros/catkin_ws/src/husky_description/urdf/: husky.urdf  husky_OS1-64_arch.urdf.xacro  husky_niall.urdf.xacro
ros/catkin_ws/src/husky_gpio_signal/: CMakeLists.txt  package.xml
ros/catkin_ws/src/husky_gpio_signal/config/: husky_gpio_signal.yaml
ros/catkin_ws/src/husky_gpio_signal/env-hooks/: 60.husky_gpio_signal.sh
ros/catkin_ws/src/husky_gpio_signal/launch/: husky_gpio_signal.launch  husky_gpio_signal_env.launch  husky_gpio_signal_yaml.launch
ros/catkin_ws/src/husky_gpio_signal/src/: .husky_gpio_signal.cpp.swp  gpio_control.py  husky_gpio_signal.cpp  husky_gpio_signal_python.cpp
ros/catkin_ws/src/husky_nodedrop/: CMakeLists.txt  package.xml
ros/catkin_ws/src/husky_nodedrop/config/: husky_nodedrop.yaml
ros/catkin_ws/src/husky_nodedrop/env-hooks/: 60.husky_nodedrop.sh
ros/catkin_ws/src/husky_nodedrop/launch/: husky_nodedrop_env.launch  husky_nodedrop_yaml.launch
ros/catkin_ws/src/husky_nodedrop/src/: husky_nodedrop.cpp  husky_nodedrop_onesource.cpp  husky_nodedrop_simple.cpp
ros/catkin_ws/src/husky_nodedrop/test/: fake_device.json  fake_device.py
ros/catkin_ws/src/lio_sam/config/: params.yaml  params.yaml.bkp  params.yaml.ouster
ros/catkin_ws/src/lio_sam/launch/: run.launch
ros/catkin_ws/src/lio_sam/launch/include/config/: robot.urdf.xacro
ros/catkin_ws/src/ouster_ros/launch/: sensor.launch
rviz/: demo_3d.rviz  g_cart_n3.rviz  g_cart_n4.rviz
scripts/: builder.sh  env_ctrl.sh  env_husky.sh  env_pi.sh  getip  getip.cpp  install_packages.sh
