<?xml version="1.0"?>
<package>
  <name>can</name>
  <version>0.0.0</version>
  <description>Can handling for carl</description>

  <author email="niall.devlin@student.nmt.edu">Niall Devlin</author>
  <maintainer email="niall.devlin@student.nmt.edu">Niall Devlin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>husky_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>husky_msgs</run_depend>

  <export></export>
</package>
